--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
     border: 0;
     outline: 0;
     padding-top: 5px;
+    cursor: pointer;
   }
   #scrollableHorizontalMenu .left-paddle {
     left: 0;
